Fix lots of dependencies to support Java 15 Also remove all static code analysis tools in favor of Sonar